tmp-dev-full/objects/GdPointRefreshSetting__c/GdPointRefreshSetting__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Default settings for point refresh execution.</description>
    <label>포인트 새로고침 설정</label>
</CustomObject>