tmp-dev-full/objects/GdPointRefreshSetting__c/fields/MigrationCreatedDateCutoff__c.field-meta.xml
<CustomField>
    <fullName>MigrationCreatedDateCutoff__c</fullName>
    <label>마이그레이션 CreatedDate 기준일시</label>
    <type>DateTime</type>
</CustomField>