tmp-dev-full/objects/GdPointRefreshSetting__c/fields/OpenDate__c.field-meta.xml
<CustomField>
    <fullName>OpenDate__c</fullName>
    <label>오픈 일자</label>
    <type>Date</type>
</CustomField>