tmp-dev-full/objects/GdPointRefreshSetting__c/fields/UseCreatedDateCutoff__c.field-meta.xml
<CustomField>
    <fullName>UseCreatedDateCutoff__c</fullName>
    <defaultValue>true</defaultValue>
    <label>CreatedDate 기준 사용</label>
    <type>Checkbox</type>
</CustomField>